# comp_graphics_pong

./: CMakeLists.txt  CMakePresets.json  Main.cpp  pch.h  vcpkg-configuration.json  vcpkg.json
.claude/: settings.local.json
Engine/Basic/Components/: Rendering.cpp  Rendering.h  Rendering3D.cpp  Rendering3D.h  Rendering3DTex.cpp  Rendering3DTex.h
Engine/Basic/Shapes/: Box.cpp  Box.h  LowPolySphere.cpp  LowPolySphere.h  Square.cpp  Square.h
Engine/Fonts/: teko.spritefont
Engine/Game/: Game.cpp  Game.h  GameContainer.h
Engine/Input/: Device.cpp  Device.h  Keyboard.h  Mouse.h  PC.cpp  PC.h
Engine/Lib/: Delegates.cpp  Delegates.h  Interpolated.h  TimeAccumulator.cpp  TimeAccumulator.h  Types.h
Engine/Physics/: Collide.cpp  Collide.h  CollideAble.h  Move.cpp  Move.h  MoveAble.h
Engine/Render/: Able.h  BackgroundRenderer.cpp  BackgroundRenderer.h  Camera.h  FirstPersonCamera.cpp  FirstPersonCamera.h  OrbitalCamera.cpp  OrbitalCamera.h  Pipeline.cpp  Pipeline.h  PostProcess.cpp  PostProcess.h  Renderer.h  ShaderData.h  TextRenderer.cpp  TextRenderer.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h  Window.cpp  Window.h
Engine/Shaders/: Background.hlsl  ChromaticAbberation.hlsl  Common.hlsli  GammaCorrection.hlsl  GlowSphere.hlsl  HueShift.hlsl  LcdLines.hlsl  Phong3D.hlsl  PhongTex3D.hlsl  Posterize.hlsl  SDFSmooth.hlsl  Shader.hlsl  Shader3D.hlsl  ShaderNoise3D.hlsl  ShaderTex3D.hlsl  ShadowDepth.hlsl  Vignette.hlsl
Engine/Update/: Fixed.cpp  Fixed.h  FixedAble.h
Game/Katamari/: KatamariGameContainer.cpp  KatamariGameContainer.h  KatamariWorld.cpp  KatamariWorld.h
Game/Katamari/Mesh/: imgui.ini  thecat.fbx
Game/Pong/: BackgroundRenderer.cpp  BackgroundRenderer.h  Ball.cpp  Ball.h  Counter.cpp  Counter.h  PongGameContainer.cpp  PongGameContainer.h  ShaderData.h  Stick.cpp  Stick.h  StickAI.cpp  StickAI.h  StickPlayer.cpp  StickPlayer.h  TextRenderer.cpp  TextRenderer.h  Wall.cpp  Wall.h
Game/Solar/: SolarBody.cpp  SolarBody.h  SolarGameContainer.cpp  SolarGameContainer.h  SolarSystem.cpp  SolarSystem.h
Shaders/: Shader.hlsl
